# smart-on-fhir-client

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml
smart_on_fhir_client/: client.py  partner.py  strategy.py  utils.py
smart_on_fhir_client/requester/: fhir_reference.py  fhir_requester.py  fhir_resource.py  mixin.py
